base/pgadmin-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pgadmin
  namespace: wzdatabase
spec:
  to:
    kind: Service
    name: pgadmin
  port:
    targetPort: 80
